@@ -262,14 +262,11 @@ void psl_rgb_to_cmyk_char (unsigned char rgb[], unsigned char cmyk[]);
 void psl_rgb_to_cmyk (double rgb[], double cmyk[]);
 void psl_rgb_to_hsv (double rgb[], double hsv[]);
 void psl_cmyk_to_rgb (double rgb[], double cmyk[]);
-char *psl_putcolor (struct PSL_CTRL *PSL, double rgb[]);
 char *psl_putdash (struct PSL_CTRL *PSL, char *pattern, double offset);
 void psl_defunits_array (struct PSL_CTRL *PSL, const char *param, double *array, int n);
 void psl_set_reducedpath_arrays (struct PSL_CTRL *PSL, double *x, double *y, int npath, int *n, int *m, int *node);
 void psl_set_path_arrays (struct PSL_CTRL *PSL, const char *prefix, double *x, double *y, int npath, int *n);
 void psl_set_attr_arrays (struct PSL_CTRL *PSL, const char *prefix, int *node, double *angle, char **txt, int npath, int *n, int *m);
-void psl_set_int_array (struct PSL_CTRL *PSL, const char *param, int *array, int n);
-void psl_set_txt_array (struct PSL_CTRL *PSL, const char *param, char *array[], int n);
 void psl_set_real_array (struct PSL_CTRL *PSL, const char *param, double *array, int n);
 psl_indexed_image_t psl_makecolormap (struct PSL_CTRL *PSL, unsigned char *buffer, int nx, int ny, int nbits);
 int psl_bitreduce (struct PSL_CTRL *PSL, unsigned char *buffer, int nx, int ny, int ncolors);
@@ -286,7 +283,6 @@ int psl_patch (struct PSL_CTRL *PSL, double *x, double *y, int np);
 int psl_pattern_cleanup (struct PSL_CTRL *PSL);
 int psl_read_rasheader  (struct PSL_CTRL *PSL, FILE *fp, struct imageinfo *h, int i0, int i1);
 int psl_paragraphprocess (struct PSL_CTRL *PSL, double y, double fontsize, char *paragraph);
-int psl_encodefont (struct PSL_CTRL *PSL, int font_no);
 int psl_putfont (struct PSL_CTRL *PSL, double fontsize);
 void psl_getorigin (double xt, double yt, double xr, double yr, double r, double *xo, double *yo, double *b1, double *b2);
 const char *psl_putusername ();
